清理不需要的文件

--- a/online-exam/config-server/src/main/resources/application.yml
+++ b/online-exam/config-server/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     config:
       server:
         git:
-          uri: https://gitee.com/lsgwr/config-server
+          uri: https://github.com/19920625lsg/config-server
           username:
           password:
 
