--- a/online-exam/admin-service/pom.xml
+++ b/online-exam/admin-service/pom.xml
@@ -18,7 +18,16 @@
     </parent>
 
     <dependencies>
-
+         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.netflix.zuul/zuul-core -->
+        <dependency>
+            <groupId>com.netflix.zuul</groupId>
+            <artifactId>zuul-core</artifactId>
+            <version>1.3.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
